# nmag-python-3

./: .gitignore  CONVERSION_PLAN.md  PARITY_COMPLETION.md  README.md  pyproject.toml
docs/: nmesh-ocaml-to-python3-migration-plan-v2.md  nmesh-ocaml-to-python3-migration-plan.md
ocaml/: .cmi  example.py
ocaml/nmag/: dune-project  nmag.opam
ocaml/nmag/lib/: ba.ml  base.ml  deferred.ml  dune  example.ml  example.mli
ocaml/nmag/test/: dune  test_ba.ml
si/: constants.py  physical.py  test.py
src/anisotropy/: __init__.py  anisotropy.py
src/mag_material/: __init__.py  mag_material.py
src/mock_features/: __init__.py  mock_features.py
src/nmesh/: __init__.py  backend.py  base.py  features.py  geometry.py  meshio_support.py  nmesh.py  utils.py
src/nmesh/geometry/: __init__.py  boolean_operations.py  primitives.py  transform.py
src/nmesh/io/: __init__.py  legacy_nmesh_hdf5.py  meshio_support.py
src/nmesh/mesher/: __init__.py  defaults.py  driver.py  meshing_parameters.py  parity.py  periodic.py
src/nmesh/mesher/relaxation/: __init__.py  _constants.py  _types.py  density.py  engine.py  finalize.py  forces.py  geometry.py  jit.py  recovery.py  seeding.py  topology.py
src/nmesh/utils/: __init__.py  array_list_utils.py  constants.py  timing_memory_utils.py  types.py
src/si/: constants.py  physical.py
src/simulation/: clock.py  data_writer.py  features.py  hysteresis.py  mock_features.py  quantity.py  simulation_core.py
src/simulation/inference/: inference.py
src/throttler/: __init__.py  throttler.py
src/when/: __init__.py  when.py
tests/: anisotropy_test.py  mag_material_test.py  nmesh_test.py  si_test.py  throttler_test.py  when_test.py
tests/nmesh/: test_defaults.py  test_driver.py  test_geometry.py  test_integration.py  test_meshing_engine.py  test_parity.py  test_utils.py
tests/nmesh/io/: test_legacy_nmesh_hdf5.py  test_meshio_support.py
tests/nmesh/utils/: test_array_list_utils.py  test_timing_memory_utils.py
tests/simulation/: clock_test.py  data_writer.py  hysteresis_test.py  inference_test.py  quantity_test.py
tools/: nmesh_parity_compare.py
