[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "namg-python-3"
version = "0.0.1"
authors = [{ name = "TriMagnetix", email = "info@trimagnetix.com" }]
description = "A short description of your project."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent" ]
dependencies = ["pint", "numpy"]

[project.optional-dependencies]
test = ["pytest", "pytest-cov", "pytest-watch"]

[tool]
setuptools.package-dir = { "" = "src" }
setuptools.packages.find.where = ["src"]

pytest.ini_options.addopts = [
  "-ra",
  "-v",
  "--cov=src",
  "--cov-report=term-missing",
  "--cov-report=html" ]
pytest.ini_options.testpaths = ["tests"]

pytest_watch.runner = "pytest --clear"

coverage.run.omit = ["*/tests/*"]
