[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nmag-python-3"
version = "0.0.1"
authors = [{ name = "TriMagnetix", email = "info@trimagnetix.com" }]
description = "\"Nmag is a flexible finite element micromagnetic simulation package with an user interface based on the Python_ programming language.\" This is a rewrite to make it available for Python 3."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent" ]
dependencies = ["pint", "numpy"]

[project.optional-dependencies]
test = ["pytest", "pytest-cov", "pytest-watch"]

[tool]
setuptools.package-dir = { "" = "src" }
setuptools.packages.find.where = ["src"]

pytest.ini_options.addopts = [
  "-ra",
  "-v",
  "--cov=src",
  "--cov-report=term-missing",
  "--cov-report=html" ]
pytest.ini_options.testpaths = ["tests"]

pytest_watch.runner = "pytest --clear"

coverage.run.omit = ["*/tests/*"]
