(lang dune 3.14)

(name nmag)

(version 0.0.1)

(generate_opam_files true)

(source
 (github TriMagnetix/nmag-python-3))

(authors "TriMagnetix")

(maintainers "TriMagnetix <info@trimagnetix.com>")

(license LICENSE)

(documentation https://github.com/nmag-project/nmag-src)

(package
 (name nmag)
 (synopsis "Flexible finite element micromagnetic simulation package (Python 3 port)")
 (description "Nmag is a flexible finite element micromagnetic simulation package with a user interface based on the Python programming language. This is a rewrite to make it available for Python 3.")
 (depends
  (ocaml (and (>= 4.14.0) (< 5.0.0))) ; ocaml-in-python doesn't work with OCaml 5 yet
  dune
  ocaml-in-python)
 (tags
  (micromagnetism simulation python finite-element)))